[package]
name = "kwin-mouse-loc"
version = "0.0.0-pre-0.0.3"
edition = "2021"
authors = ["Neutron3529 <qweytr_1@163.com>"]
description = "A very simple mouse controller that uses `libc::process_vm_readv` to read mouse location. Need root permissions."
repository = "https://github.com/Neutron3529/kwin-mouse-loc/"
license = "GPL-3.0-or-later"
build = "build.rs"
keywords = ["wayland","KDE","KWin","mouse"]

[dependencies]
libc = { version = "0.2.158", default-features = false }

[build-dependencies]
bindgen = "0.70.1"

[features]
uinput = []
