[package]
name = "kwin-mouse-loc"
version = "0.0.1-pre-0.0.1-another-try-docfix"
edition = "2021"
authors = ["Neutron3529 <qweytr_1@163.com>"]
description = "A very simple mouse controller that uses `libc::process_vm_readv` to read mouse location. Need root permissions."
repository = "https://github.com/Neutron3529/kwin-mouse-loc/"
license = "GPL-3.0-or-later"
build = "build.rs"
keywords = ["wayland","KDE","KWin","mouse"]

[features]
default = ["docgen-detect"] # prevent document compiling failed
docgen-detect = [] # skip processing header from build script
keyboard = ["uinput"]
uinput = []
test = []
update-offset = []
update-pos = ["update-offset","dep:bindgen"]

[build-dependencies]
bindgen = { version = "0.70.1", default-features = false }

[dependencies]
libc = { version = "0.2.159", default-features = false }
bindgen = { version = "0.70.1", default-features = false, optional = true }
